# raylib-template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
src/: all.cc  main.cc  precomp.h
web/: index.html
